src-ken&y/objects/Sales_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>Related_Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Sales Order Lines (Related Sales Order Line)</relationshipLabel>
        <relationshipName>Sales_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Date__c</fullName>
        <defaultValue>today( )</defaultValue>
        <description>Date the customer requires the line item</description>
        <label>Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Returned_To_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returned To Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SKID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKID</label>
        <referenceTo>SKID__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <description>allow matching to the correct sales order header</description>
        <label>Sales Order Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Company does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Sales_Order__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Selling unit of measure</description>
        <label>Selling UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_From_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship From Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Location</description>
        <label>Ship From Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Sales Order Line Ship From Location value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Location__c.Facility__r.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Sales Order Lines (Ship From Location)</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Line open if item is not shipped; line closed if shipped; line partial if partially shipped</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type indicates the sales order line type. (eg. RMA, Kit, Kit-Child, etc...). Based on the value the Sales order line flow is controlled through different status.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Kit</fullName>
                </value>
                <value>
                    <fullName>Kit-Child</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Code__c</fullName>
        <description>13 char UPC code</description>
        <label>UPC Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Sales_Order_Line__c</fullName>
        <description>This field is used to validate if the sales order lines are unique for each sales order. The value contains concatenation of Sales_Order__c.Id and Line__c</description>
        <label>Unique Sales Order Line</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Usage-Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Added_Tax_Rate__c</fullName>
        <description>The rate at which the value added tax was calculated for this sales order line.</description>
        <inlineHelpText>(VAT) The total value added tax for this sales order line.</inlineHelpText>
        <label>VAT Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_UOM_Name__c</fullName>
        <formula>Weight_UOM__r.Name</formula>
        <label>Weight UOM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weight UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Sales Order Lines (Weight UOM)</relationshipLabel>
        <relationshipName>Sales_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Will be populated for sales order lines with item source as &apos;Build To Order&apos;</description>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Order Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Line__c</columns>
        <columns>Company__c</columns>
        <columns>Customer_ID__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>Extended_Price__c</columns>
        <columns>Status__c</columns>
        <columns>Required_Date__c</columns>
        <columns>Quantity_Ordered__c</columns>
        <columns>Quantity_Shipped__c</columns>
        <columns>Quantity_Backordered__c</columns>
        <columns>Has_Exceptions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Closed</fullName>
        <columns>Company__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Required_Date__c</columns>
        <columns>Quantity_Ordered__c</columns>
        <columns>Quantity_Shipped__c</columns>
        <columns>Extended_Price__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed</label>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Product__c</columns>
        <columns>Extended_Price__c</columns>
        <columns>Status__c</columns>
        <columns>Required_Date__c</columns>
        <columns>Quantity_Ordered__c</columns>
        <columns>Quantity_Shipped__c</columns>
        <columns>Quantity_Backordered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>Fulfillment</fullName>
        <columns>Company__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Quantity_Ordered__c</columns>
        <columns>Quantity_Backordered__c</columns>
        <columns>Required_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Quantity_Backordered__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Fulfillment</label>
    </listViews>
    <nameField>
        <label>Sales Order Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Company_must_match</fullName>
        <active>true</active>
        <description>Company must match header company.</description>
        <errorConditionFormula>Sales_Order__r.Company__c  !=  Company__c</errorConditionFormula>
        <errorMessage>Company must match Sales Order Company</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_information_on_Resale_orders</fullName>
        <active>true</active>
        <description>Sales order lines with resale fulfillment source should either have an End customer or End customer reference populated</description>
        <errorConditionFormula>AND(ISPICKVAL(Fulfillment_Source__c, &apos;Resale&apos;), ISBLANK( End_Customer__c), ISBLANK(End_Customer_Reference__c))</errorConditionFormula>
        <errorMessage>Sales Order Lines with Fulfillment source as Resale should have End Customer or End customer reference field populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_percent_cannot_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>Discount_Percent__c &lt; 0</errorConditionFormula>
        <errorMessage>Discount Percent cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Fulfillment_source_on_SO_Lines</fullName>
        <active>true</active>
        <description>Lock Fulfillment source on SO Lines that are not on Draft status</description>
        <errorConditionFormula>!ISPICKVAL(Status__c , &quot;Draft&quot;) &amp;&amp; ISCHANGED(Fulfillment_Source__c)</errorConditionFormula>
        <errorMessage>You can only change the Fulfillment Source on a Sales Order line with Draft status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_ordered_and_shipped_validation</fullName>
        <active>false</active>
        <description>Quantity shipped cannot be greater than quantity ordered</description>
        <errorConditionFormula>AND(
  OR(ISCHANGED( Quantity_Ordered__c ),
     ISCHANGED( Quantity_Allocated__c ),
     ISCHANGED( Quantity_Shipped__c )
  ),
  Quantity_Ordered__c &lt; (Quantity_Allocated__c + Quantity_Shipped__c) 
)</errorConditionFormula>
        <errorDisplayField>Quantity_Ordered__c</errorDisplayField>
        <errorMessage>Quantity Ordered cannot be less than the sum of Quantity Allocated and Quantity Shipped.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Order_Lines_are_locked</fullName>
        <active>true</active>
        <errorConditionFormula>Sales_Order__r.Released_to_3PL__c == true</errorConditionFormula>
        <errorMessage>Sales Order Lines cannot be modified once Released to 3PL on Sales Order is true.</errorMessage>
    </validationRules>
</CustomObject>